--- a/public/educator.html
+++ b/public/educator.html
@@ -13,10 +13,10 @@
       <ul id="nav-list">
         <li><a href="/educator.html">Home</a></li>
         <li><a href="/educator.html">Explore</a></li>
-        <li><a href="#" onclick="showCreateLessonForm()">Create Lesson</a></li>
+        <li><a href="javascript:void(0);" onclick="showCreateLessonForm()">Create Lesson</a></li>
         <li><a href="/educator.html" >Assign Lesson++</a></li>
-        <li><a href="/educator.html">View Students</a></li>
-        <li><a href="/educator.html">Account</a></li>
+        <li><a href="javascript:void(0);" onclick="showStudentAccountInfo()">View Students</a></li>
+        <li><a href="javascript:void(0);" onclick="showEducatorAccountInfo()">Account</a></li>
         <li style="float: right">
           <a class="active" href="./educator.html">Educator</a>
         </li>
