--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <ul id="nav-list">
         <li><a href="/">Home</a></li>
         <li><a href="/">Explore</a></li>
-        <li><a href="/">Account</a></li>
+        <li><a href="javascript:void(0);" onclick="showStudentAccountInfo()">Account</a></li>
         <li style="float: right">
           <a class="" href="./educator.html">Educator</a>
         </li>
